ITC-106: fixed the grey background for active menu item on mobile.  Also fixes ITC-105 (home menu item background not behaving the same as the others when active)

--- a/style.css
+++ b/style.css
@@ -54,6 +54,11 @@ body { background: #f5f7f6; }
 .navbar .nav li {  }
 .navbar .nav li a { padding: 5px 10px; color: #fff; font-weight: normal; font-size: .85em; }
 
+.navbar #menu-main li.current-menu-item a.dropdown-toggle { 
+    background-color: #2F5783;
+    color: white;
+}
+
 .btn-navbar { background: #4b81bf; margin-top: 0; }
 
 .navbar h3 { margin: 0; font-weight: normal; font-size: 16px; padding-left: 15px; line-height: 50px; }
